--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -39,8 +39,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameScreen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenManager.cs" />
+    <Compile Include="SplashScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -50,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\splashscreen\por.jpg" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
