--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -41,9 +41,11 @@
     <StartupObject>EternalEvolution.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FadeEffect.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="Image.cs" />
+    <Compile Include="ImageEffect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager.cs" />
