--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="FadeEffect.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameplayScreen.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="ImageEffect.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Menu.cs" />
     <Compile Include="MenuItem.cs" />
     <Compile Include="MenuManager.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager.cs" />
@@ -65,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\player.png" />
+    <Content Include="Load\Player.xml" />
     <Content Include="Load\TestMenu.xml" />
     <Content Include="Load\TitleMenu.xml" />
     <Content Include="Content\ScreenManager\FadeImage.png" />
