--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SplashScreen.cs" />
+    <Compile Include="SpriteSheetEffect.cs" />
     <Compile Include="TitleScreen.cs" />
     <Compile Include="XmlManager.cs" />
   </ItemGroup>
@@ -67,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\MainGuySpriteSheet.png" />
     <Content Include="Content\player.png" />
     <Content Include="Load\Player.xml" />
     <Content Include="Load\TestMenu.xml" />
