implemented map system

--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Image.cs" />
     <Compile Include="ImageEffect.cs" />
     <Compile Include="InputManager.cs" />
+    <Compile Include="Layer.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="MenuItem.cs" />
     <Compile Include="MenuManager.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="SpriteSheetEffect.cs" />
+    <Compile Include="Tile.cs" />
     <Compile Include="TitleScreen.cs" />
     <Compile Include="XmlManager.cs" />
   </ItemGroup>
@@ -70,6 +73,8 @@
   <ItemGroup>
     <Content Include="Content\MainGuySpriteSheet.png" />
     <Content Include="Content\player.png" />
+    <Content Include="Content\terrain.png" />
+    <Content Include="Load\Map.xml" />
     <Content Include="Load\Player.xml" />
     <Content Include="Load\TestMenu.xml" />
     <Content Include="Load\TitleMenu.xml" />
