--- a/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
+++ b/game/EternalEvolution/EternalEvolution/EternalEvolution.csproj
@@ -75,6 +75,7 @@
     <Content Include="Content\player.png" />
     <Content Include="Content\terrain.png" />
     <Content Include="Load\Map.xml" />
+    <Content Include="Load\Map2.xml" />
     <Content Include="Load\Player.xml" />
     <Content Include="Load\TestMenu.xml" />
     <Content Include="Load\TitleMenu.xml" />
